update with coregistration

--- a/config.ini
+++ b/config.ini
@@ -1,13 +1,14 @@
 [directories]
 source_dir = /Users/riko/Downloads/MEG-MASC/
 derivative_dir = /Users/riko/Downloads/MEG-MASC-derivatives/
-freesurfer_subjects_dir = /Users/riko/freesurfer/
+freesurfer_subjects_dir = /Users/riko/freesurfer/subjects/
 
 [logging]
 mne_log_level = WARNING
 
 [preprocessing]
 bad_channels_file = /Users/riko/Downloads/MEG-MASC/bad_channels.csv
+participants_info_file = /Users/riko/Downloads/MEG-MASC/participants.tsv
 tmin = -0.2
 tmax = 1.0
 resample = 200
